# tony-cv-for-mobile

./: CMakeLists.txt  Info.plist  README.md  build.sh  build_host.sh  build_liqiming.sh  package.sh
src/: CMakeLists.txt  allocator.cpp  allocator.h  cpu.cpp  cpu.h  mat.h  mat_pixel_resize.cpp  opencv.cpp  opencv.h  platform.h.in
test_opencv/: CMakeLists.txt
test_opencv/include/: opencv.h
test_opencv/src/: main.cpp
